--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
   </head>
   <body style="text-align: center">
     <canvas id="unity-canvas" width=1600 height=900 style="width: 1600px; height: 900px; background: #231F20"></canvas>
-    <script src="Build/nie.loader.js"></script>
+    <script src="Build/kgdf.loader.js"></script>
     <script>
       createUnityInstance(document.querySelector("#unity-canvas"), {
-        dataUrl: "Build/nie.data.gz",
-        frameworkUrl: "Build/nie.framework.js.gz",
-        codeUrl: "Build/nie.wasm.gz",
+        dataUrl: "Build/kgdf.data",
+        frameworkUrl: "Build/kgdf.framework.js",
+        codeUrl: "Build/kgdf.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "lucekrk",
         productName: "GIGAGRA",
