--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
   </head>
   <body style="text-align: center">
     <canvas id="unity-canvas" width=1600 height=900 style="width: 1600px; height: 900px; background: #231F20"></canvas>
-    <script src="Build/GIGAGRA BETA CHRISMTAs.loader.js"></script>
+    <script src="Build/TEAG.loader.js"></script>
     <script>
       createUnityInstance(document.querySelector("#unity-canvas"), {
-        dataUrl: "Build/GIGAGRA BETA CHRISMTAs.data",
-        frameworkUrl: "Build/GIGAGRA BETA CHRISMTAs.framework.js",
-        codeUrl: "Build/GIGAGRA BETA CHRISMTAs.wasm",
+        dataUrl: "Build/TEAG.data",
+        frameworkUrl: "Build/TEAG.framework.js",
+        codeUrl: "Build/TEAG.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "lucekrk",
         productName: "GIGAGRA",
